Add editor and project preferences dialogs
- Editor and project's preferences can now be adjust in Editor > Preferences and Project > Preferences.
- Adjust new project dialog to validate for existing project in selected directory for visualization (this is checked by creation logic in Project already.)
- Tweak open folder dialog folder validation logic to check if selected path is a directory, instead of exclusive check if there is a project existing in that directory, allow using the dialog in other workflow.
- Add ignore additional constructor for ProjectPreference to prevent false load (this likely won't happened.)